--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,3 +8,15 @@ body,
 html {
   height: 100%;
 }
+
+.legend {
+  line-height: 18px;
+  color: rgb(13, 13, 14);
+}
+.legend i {
+  width: 18px;
+  height: 18px;
+  float: left;
+  margin-right: 8px;
+  opacity: .8;
+}
